# quantum-random-number

./: .gitignore  LICENSE  README.md  pyproject.toml
src/qrng/: __init__.py  cli.py  config.py  facade.py  logging_utils.py
src/qrng/backends/: __init__.py  base.py  ibmq.py  simulated.py
src/qrng/core/: __init__.py  entropy_source.py  processor.py  provider.py
src/qrng/postprocess/: __init__.py  toeplitz.py  von_neumann.py
src/qrng/verification/: __init__.py  benchmark.py  entropy.py  nist.py
tests/: test_pipeline.py  test_postprocess.py  test_verification.py
