[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrng"
version = "0.1.0"
description = "Production-grade Quantum Random Number Generator optimized for classical simulation, with QPU-ready hybrid execution."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Quantum RNG Contributors" },
]
keywords = ["quantum", "random", "rng", "entropy", "qiskit", "nist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
ibmq = ["qiskit-ibm-runtime>=0.20"]
gpu = ["qiskit-aer-gpu>=0.14"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
qrng = "qrng.cli:main"

[project.urls]
Homepage = "https://github.com/shrivastava-piyush/quantum-random-number"
Repository = "https://github.com/shrivastava-piyush/quantum-random-number"
Issues = "https://github.com/shrivastava-piyush/quantum-random-number/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qrng = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
